--- a/index.html
+++ b/index.html
@@ -1,18 +1,273 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Ready File</title>
-    <!-- Bootsrap & CSS Link Here -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>E-School</title>
+
+    <link rel="shortcut icon" href="images/ICON/Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
+
 <body>
- 
-<!-- JavaScript Link Here -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+    <section id="header">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <a class="navbar-brand" href="#">
+                    <img src="images/ICON/Logo.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#banner">Books <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#online-courses">Courses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#card">Others</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#testimonial">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
+                        </li>
+                    </ul>
+                    <button class="all-btn" type="submit">Sign in</button>
+                </div>
+            </nav>
+        </div>
+    </section>
+
+    <section id="banner">
+        <div class="container">
+            <div class="row banner-content">
+                <div class="col-lg-5">
+                    <div class="banner-text">
+                        <p class="colored-p">Are you ready to Learn?</p>
+                        <h1>Learn With fun <br> on <span class="colored-h1">any schedule</span></h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Varius blandit facilisis quam netus.
+                        </p>
+                        <button class="all-btn" type="submit">Get Started</button>
+                    </div>
+                </div>
+
+                <div class="col-lg-7">
+                    <img class="img-fluid w-75" src="images/Photos/Illustration.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="card">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                    <div class="card-content">
+                        <img class="img-fluid w-25" src="images/ICON/book.png" alt="">
+                        <h4>1500+ Topic</h4>
+                        <p>Learn Anythings</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-3">
+                    <div class="card-content card-highlight">
+                        <img class="img-fluid w-25" src="images/ICON/Student.png" alt="">
+                        <h4>1800+ Students</h4>
+                        <p>Learn Anythings</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-3">
+                    <div class="card-content">
+                        <img class="img-fluid w-25" src="images/ICON/Test.png" alt="">
+                        <h4>9K+ Test Token</h4>
+                        <p>Learn Anythings</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-3">
+                    <div class="card-content">
+                        <img class="img-fluid w-25" src="images/ICON/Students.png" alt="">
+                        <h4>2000+ Student</h4>
+                        <p>Learn Anythings</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="online-courses">
+        <div class="container">
+            <h2 class="caption">Online Courses</h2>
+
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="online-courses-content">
+                        <img class="img-fluid w-100" src="images/Photos/Morder pyschology.png" alt="">
+                        <div class="online-courses-text">
+                            <h4>Modern Psychology</h4>
+                            <p>Designation</p>
+                            <button class="all-btn" type="submit">Buy Course</button>
+                        </div>
+                        <div class="online-courses-footer d-flex justify-content-between">
+                            <div class="footer-left d-flex align-items-between">
+                                <img class="footer-image" src="images/ICON/calendar.png" alt="">
+                                <p>Start 20 April, 2021</p>
+                            </div>
+                            <div class="footer-right d-flex align-items-between">
+                                <img class="footer-image" src="images/ICON/people.png" alt="">
+                                <p>60 seats</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="online-courses-content">
+                        <img class="img-fluid w-100" src="images/Photos/Morder psyc.png" alt="">
+                        <div class="online-courses-text">
+                            <h4>Modern Psychology</h4>
+                            <p>Designation</p>
+                            <button class="all-btn" type="submit">Buy Course</button>
+                        </div>
+                        <div class="online-courses-footer d-flex justify-content-between">
+                            <div class="footer-left d-flex align-items-between">
+                                <img class="footer-image" src="images/ICON/calendar.png" alt="">
+                                <p>Start 20 April, 2021</p>
+                            </div>
+                            <div class="footer-right d-flex align-items-between">
+                                <img class="footer-image" src="images/ICON/people.png" alt="">
+                                <p>60 seats</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="online-courses-content">
+                        <img class="img-fluid w-100" src="images/Photos/Morder pychons.png" alt="">
+                        <div class="online-courses-text">
+                            <h4>Modern Psychology</h4>
+                            <p>Designation</p>
+                            <button class="all-btn" type="submit">Buy Course</button>
+                        </div>
+                        <div class="online-courses-footer d-flex justify-content-between">
+                            <div class="footer-left d-flex align-items-between">
+                                <img class="footer-image" src="images/ICON/calendar.png" alt="">
+                                <p>Start 20 April, 2021</p>
+                            </div>
+                            <div class="footer-right d-flex align-items-between">
+                                <img class="footer-image" src="images/ICON/people.png" alt="">
+                                <p>60 seats</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section id="testimonial">
+        <div class="container">
+            <h2 class="caption">Testimonial</h2>
+            <div class="row">
+                <div class="testimonial-content d-flex align-items-center">
+                    <img src="images/Photos/Man.png" alt="">
+                    <p>There are many variations of passages of Lorem Ipsum available, but the<br>
+                        majority have suffered alteration in some form, by injected humour, <br>
+                        or randomised words which don't look even slightly believable.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="subscribe">
+        <div class="container">
+            <div class="row subscribe-form">
+                <div class="col-lg-12 d-flex align-items-center justify-content-center">
+                    <div class="subscribe-content">
+                        <h3>LET'S STAY IN TOUCH</h3>
+                        <p>Get updates on sales, specials and more</p>
+                        <input type="email" name="" id="">
+                        <button class="all-btn" type="submit">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="footer">
+        <div class="container">
+            <div class="row footer-content">
+                <div class="col-lg-4">
+                    <p>Millions of people of all ages and from around<br>
+                        the world are improving their lives with us</p>
+                </div>
+                <div class="col-lg-3">
+                    <h5>Course</h5>
+                    <ul>
+                        <li><a href="">Graphic Design</a></li>
+                        <li><a href="">Web Design</a></li>
+                        <li><a href="">Business</a></li>
+                        <li><a href="">Marketing</a></li>
+                        <li><a href="">Engineering</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3">
+                    <h5>Terms</h5>
+                    <ul>
+                        <li><a href="">Graphic Design</a></li>
+                        <li><a href="">Web Design</a></li>
+                        <li><a href="">Business</a></li>
+                        <li><a href="">Marketing</a></li>
+                        <li><a href="">Engineering</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2">
+                    <h5>Useful Links</h5>
+                    <ul>
+                        <li><a href="">Graphic Design</a></li>
+                        <li><a href="">Web Design</a></li>
+                        <li><a href="">Business</a></li>
+                        <li><a href="">Marketing</a></li>
+                        <li><a href="">Engineering</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-lg-12">
+                    <small class="footer-copyright">
+                        <p>Copyright © 2020 Rokomari.com</p>
+                    </small>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- JS Here -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+    </script>
 
 </body>
+
 </html>
